Revision history for Const::Exporer

	 - Fixed formatting of Changes file.

	 - Cleaned up details from README using Pod::Readme.

	 - Added QA tests to the git repo.

         - Removed unnecessary dependency from Makefile.PL.

v0.1.2   2014-02-24

         - Import dies if given the tag "all", since it's reserved.

         - Various documentation improvements.

         - Code cleanup.

v0.1.1   2014-02-23

         - Added missing Changes and MANIFEST.SKIP files.

         - Added additional modules to SEE ALSO section.

         - Updated README.

v0.1.0   2014-02-23

         - First public release of Const::Exporter.