@@ -19,5 +19,6 @@ README
 t/01-compile.t
 t/10-basic.t
 t/11-tags.t
+t/12-blessed.t
 t/20-example.t
 t/21-example.t
